dulwich (0.8.6-1) UNRELEASED; urgency=low

  * New upstream release.
   + Drop 01_less_strict_index_tests: applied upstream.
  * Migrate to Git; replace Vcs-Bzr header with Vcs-Git header.
  * Remove duplicate field copyright in copyright file.

 -- Jelmer Vernooij <jelmer@debian.org>  Fri, 09 Nov 2012 23:44:30 +0100

dulwich (0.8.5-2) unstable; urgency=low

  * Make index tests a bit less strict, fixes FTBFS on some systems.
    Closes: #666328

 -- Jelmer Vernooij <jelmer@debian.org>  Mon, 02 Apr 2012 12:49:38 +0200

dulwich (0.8.5-1) unstable; urgency=low

  * Install upstream changelog.
  * New upstream release.

 -- Jelmer Vernooij <jelmer@debian.org>  Thu, 29 Mar 2012 15:38:35 +0200

dulwich (0.8.4-1) unstable; urgency=low

  * New upstream release.
  * Bump standards version to 3.9.3 (no changes).
  * Fix header of copyright file format.

 -- Jelmer Vernooij <jelmer@debian.org>  Wed, 28 Mar 2012 14:23:05 +0200

dulwich (0.8.3-1) unstable; urgency=low

  * New upstream release.

 -- Jelmer Vernooij <jelmer@debian.org>  Sat, 21 Jan 2012 22:24:12 +0100

dulwich (0.8.2-1) unstable; urgency=low

  * Fix Vcs URL.
  * New upstream release.

 -- Jelmer Vernooij <jelmer@debian.org>  Sun, 18 Dec 2011 21:35:03 +0100

dulwich (0.8.1-1) unstable; urgency=low

  * New upstream release.
   + Now provides access to remote http(s) smart server repositories.
     Closes: #636331

 -- Jelmer Vernooij <jelmer@debian.org>  Mon, 31 Oct 2011 13:07:39 -0700

dulwich (0.8.0-1) unstable; urgency=low

  * New upstream release.
   + Adds support for IPv6 to git:// client. Closes: #631490
   + Fixes use of ~username in git:// URLs. Closes: #631483
  * Bump standards version to 3.9.2 (no changes).

 -- Jelmer Vernooij <jelmer@debian.org>  Sun, 07 Aug 2011 15:03:44 +0200

dulwich (0.7.1-3) unstable; urgency=low

  * Bump standards version to 3.9.2 (no changes).
  * Add python-dulwich-dbg package.

 -- Jelmer Vernooij <jelmer@debian.org>  Sat, 18 Jun 2011 17:04:43 +0200
